# hyperQ-distributed-MQ

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/admin_cli/: main.cpp
apps/broker/: main.cpp
apps/consumer_cli/: main.cpp
apps/demo/: main.cpp
apps/producer_cli/: main.cpp
include/hyperq/broker/: broker.hpp  partition.hpp
include/hyperq/client/: consumer.hpp  producer.hpp
include/hyperq/common/: types.hpp
include/hyperq/coordinator/: consumer_groups.hpp
include/hyperq/storage/: commit_log.hpp
src/: CMakeLists.txt
src/broker/: broker.cpp  partition.cpp
src/common/: config.cpp  types.cpp
src/coordinator/: consumer_groups.cpp
src/storage/: commit_log.cpp
tests/: CMakeLists.txt
tests/unit/: test_commit_log.cpp
